[package]
name = "awesomerustproject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.1", features = ["runtime-tokio", "macros", "postgres"] }
testcontainers = "0.14.0"
tokio = { version = "1.32.0", features = ["full"] }
